[package]
name = "tile_engine"
version = "0.1.0"
authors = ["Alexander Kuvaev <alexander@kuvaev.me>"]
license = "MIT"
description = "Tile engine in Rust."
readme = "README.md"
repository = "https://github.com/Vinatorul/tileengine-rs"
homepage = "https://github.com/Vinatorul/tileengine-rs"
documentation = "https://vinatorul.github.io/tileengine-rs/tile_engine"

[features]
unstable = []